--- a/vercel.json
+++ b/vercel.json
@@ -6,6 +6,16 @@
   "installCommand": "npm install",
   "env": {
     "MONGODB_URI": "mongodb+srv://snap:C4U2QqNfr8OlzNjt@snapscape-mongo.gli1z.mongodb.net/?retryWrites=true&w=majority&appName=snapscape-mongo",
-    "NEXTAUTH_SECRET": "C4U2QqNfr8OlzNjt"
+    "NEXTAUTH_SECRET": "C4U2QqNfr8OlzNjt",
+    "NEXTAUTH_URL": "https://snapscape.onlyoman.com",
+    "CLOUDINARY_CLOUD_NAME": "dfhn6beii",
+    "CLOUDINARY_API_KEY": "781776385212242",
+    "CLOUDINARY_API_SECRET": "qsk6VO65Nwai70evD1nt6LZJuzw"
+  },
+  "functions": {
+    "src/app/api/**/*": {
+      "memory": 1024,
+      "maxDuration": 10
+    }
   }
 } 
