Enhanced Cloudinary integration with better error handling and testing tools

--- a/package.json
+++ b/package.json
@@ -11,9 +11,10 @@
   },
   "dependencies": {
     "bcryptjs": "^3.0.2",
-    "cloudinary": "^2.5.1",
+    "cloudinary": "^2.6.0",
     "critters": "^0.0.23",
     "date-fns": "^4.1.0",
+    "dotenv": "^16.4.7",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.13.1",
     "mongoose": "^8.11.0",
