--- a/package.json
+++ b/package.json
@@ -10,18 +10,20 @@
     "deploy": "npx vercel --prod"
   },
   "dependencies": {
+    "@heroicons/react": "^2.2.0",
     "bcryptjs": "^3.0.2",
     "cloudinary": "^2.6.0",
     "critters": "^0.0.23",
     "date-fns": "^4.1.0",
-    "dotenv": "^16.4.7",
+    "formidable": "^3.5.4",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.13.1",
     "mongoose": "^8.11.0",
     "next": "15.2.0",
     "next-auth": "^4.24.11",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-image-crop": "^11.0.10"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
@@ -30,6 +32,7 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "babel-plugin-module-resolver": "^5.0.2",
+    "dotenv": "^16.4.7",
     "eslint": "^9",
     "eslint-config-next": "15.2.0",
     "tailwindcss": "^4",
