--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.2.0",
+    "@types/formidable": "^3.4.5",
     "bcryptjs": "^3.0.2",
     "cloudinary": "^2.6.0",
     "critters": "^0.0.23",
