--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "date-fns": "^4.1.0",
     "formidable": "^3.5.4",
     "jsonwebtoken": "^9.0.2",
+    "lucide-react": "^0.511.0",
     "mongodb": "^6.13.1",
     "mongoose": "^8.11.0",
     "next": "15.2.0",
