--- a/package.json
+++ b/package.json
@@ -26,10 +26,12 @@
     "mongoose": "^8.11.0",
     "next": "15.2.0",
     "next-auth": "^4.24.11",
+    "next-pwa": "^5.6.0",
     "nodemailer": "^6.10.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-image-crop": "^11.0.10"
+    "react-image-crop": "^11.0.10",
+    "workbox-webpack-plugin": "^7.3.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
